--- a/app/views/home/page11.html.erb
+++ b/app/views/home/page11.html.erb
@@ -60,6 +60,10 @@
                 <div class="profile-user-messages">
 
                     <div class="full-detail-bid-item">
+
+                        <div class="full-detail-deal-item-name">
+                            <div><a href="#">Iphone 6S space grey 64gbasd asd asd asd asd</a></div> <span> тохиролцоонд ирсэн санал.</span>
+                        </div>
                                 
                             <div class="full-detail-bid-item-detail-img">
                                 <%= image_tag('galaxyS5.jpg')%>
@@ -77,6 +81,10 @@
 
                         </div>
                         <div class="full-detail-bid-item">
+
+                            <div class="full-detail-deal-item-name">
+                            <div><a href="#">Iphone 6S space grey 64gbasd asd asd asd asd</a></div> <span> тохиролцоонд ирсэн санал.</span>
+                        </div>
                                 
                             <div class="full-detail-bid-item-detail-img">
                                 <%= image_tag('galaxyS5.jpg')%>
@@ -94,6 +102,10 @@
 
                         </div>
                         <div class="full-detail-bid-item">
+
+                            <div class="full-detail-deal-item-name">
+                            <div><a href="#">Iphone 6S space grey 64gbasd asd asd asd asd</a></div> <span> тохиролцоонд ирсэн санал.</span>
+                        </div>
                                 
                             <div class="full-detail-bid-item-detail-img">
                                 <%= image_tag('galaxyS5.jpg')%>
@@ -111,6 +123,10 @@
 
                         </div>
                         <div class="full-detail-bid-item">
+
+                            <div class="full-detail-deal-item-name">
+                            <div><a href="#">Iphone 6S space grey 64gbasd asd asd asd asd</a></div> <span> тохиролцоонд ирсэн санал.</span>
+                        </div>
                                 
                             <div class="full-detail-bid-item-detail-img">
                                 <%= image_tag('galaxyS5.jpg')%>
@@ -128,6 +144,10 @@
 
                         </div>
                         <div class="full-detail-bid-item">
+
+                            <div class="full-detail-deal-item-name">
+                            <div><a href="#">Iphone 6S space grey 64gbasd asd asd asd asd</a></div> <span> тохиролцоонд ирсэн санал.</span>
+                        </div>
                                 
                             <div class="full-detail-bid-item-detail-img">
                                 <%= image_tag('galaxyS5.jpg')%>
