--- a/app/views/home/page3.html.erb
+++ b/app/views/home/page3.html.erb
@@ -117,7 +117,7 @@
 		          	<div class="full-detail-short-deals-intro">
 		          		<strong>Ирсэн санал: <br/></strong>
 		          		<div class="full-detail-short-deals-intro-items">
-		          			<a class="accepted-bid-item-little" href="#"><span class="glyphicon glyphicon-ok-sign"></span><%= image_tag('123.jpg')%></a>
+		          			<a class="accepted-bid-item-little" href="#"><span class="glyphicon glyphicon-ok-sign glyphicon-background"><span class="inner"></span></span><%= image_tag('123.jpg')%></a>
 		          			<a href="#"><%= image_tag('123.jpg')%></a>
 		          			<a href="#"><%= image_tag('123.jpg')%></a>
 		          			<a href="#"><%= image_tag('123.jpg')%></a>
