--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -7,7 +7,7 @@
 
 			<div class="login-page-title">Нууц үгээ мартсан</div>
 			<% if resource.errors.full_messages.count > 0 %>
-        <div class="row">
+        <div class="alert alert-warning">
           <ul>
             <%= raw resource.errors.full_messages.map { |msg| content_tag(:li, msg) }.join %>
           </ul>
