--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -7,7 +7,7 @@
 
       <div class="sign-up-page-title">Нэвтрэх мэдээллээ өөрчлөх</div>
       <% if resource.errors.full_messages.count > 0 %>
-        <div class="row">
+        <div class="alert alert-warning">
           <ul>
             <%= raw resource.errors.full_messages.map { |msg| content_tag(:li, msg) }.join %>
           </ul>
