--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -7,7 +7,7 @@
 
       <div class="sign-up-page-title"><%= t('view.registration.register')%></div>
       <% if resource.errors.full_messages.count > 0 %>
-        <div class="row">
+        <div class="alert alert-warning">
           <ul>
             <%= raw resource.errors.full_messages.map { |msg| content_tag(:li, msg) }.join %>
           </ul>
@@ -16,19 +16,19 @@
         
       <%= form_for(resource, :as => resource_name, :url => registration_path(resource_name)) do |f| %>
 
-        <div  class="sign-up-page-input"><%= f.label :email %><br />
+        <div  class="sign-up-page-input"><%= f.label :email %>
         <%= f.email_field :email, :autofocus => true %></div>
 
-        <div  class="sign-up-page-input"><%= f.label :first_name %><br />
+        <div  class="sign-up-page-input"><%= f.label :first_name %>
         <%= f.text_field :first_name %></div>
 
-        <div  class="sign-up-page-input"><%= f.label :last_name %><br />
+        <div  class="sign-up-page-input"><%= f.label :last_name %>
         <%= f.text_field :last_name %></div>
 
-        <div  class="sign-up-page-input"><%= f.label :password %><br />
+        <div  class="sign-up-page-input"><%= f.label :password %>
         <%= f.password_field :password %></div>
 
-        <div  class="sign-up-page-input"><%= f.label :password_confirmation %><br />
+        <div  class="sign-up-page-input"><%= f.label :password_confirmation %>
         <%= f.password_field :password_confirmation %></div>
 
         <div  class="sign-up-page-button"><%= f.submit t('view.registration.register') %></div>
