--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -24,9 +24,11 @@
 
   <div class="right-banner">
 
-    <a href="#"><%= image_tag('bobby_banner.jpg')%></a>
+    <a href="#"><%= image_tag('banner1.png')%></a>
 
   </div>
+
+  <%= react_component("LatestDealList") %>
 
 </div>
 
