--- a/app/views/home/page2.html.erb
+++ b/app/views/home/page2.html.erb
@@ -108,13 +108,25 @@
 
                         <div class="crop-pic">
 
+                            <div class="upload-pic-loader"></div>
+
                             <%= image_tag('iphone.jpg')%>
+
+                            
 
                         </div>
 
                         <div class="clearfix"></div>
 
-                        aaaa
+                        <div class="pic-upload-buttons">
+
+                            <button type="button" class="btn btn-default">Default</button>
+                            <button type="button" class="btn btn-primary">Default</button>
+                            <button type="button" class="btn btn-success">Default</button>
+
+                            
+
+                        </div>
 
                     </div>
                 </div>
