--- a/app/assets/stylesheets/main.css.scss
+++ b/app/assets/stylesheets/main.css.scss
@@ -415,8 +415,12 @@ body{
 }
 
 
-
-
+.has-error-span{
+  font-size: 12px;
+  color: #a94442;
+  font-weight: normal;
+  font-style: italic;
+}
 
   .timeline-user-info-tooltip{
     position: absolute;
