--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -68,7 +68,7 @@
                 <a href="#">Нүүр</a>
                 <a href="#">Бидний тухай</a>
                 <a href="#">Үйлчилгээний нөхцөл</a>
-                <a href="#">Тусламж</a>
+                <a href="#">Түгээмэл асуулт хариулт</a>
                 <a href="#">Сурталчилгаа байршуулах</a>
                 <a href="#">Сайтын бүтэц</a>
                 <a href="#">Холбоо барих</a>
