--- a/app/assets/stylesheets/main.css.scss
+++ b/app/assets/stylesheets/main.css.scss
@@ -386,7 +386,8 @@ body{
   width: 77px;
   position: absolute;
   right: -7px;
-  top:-7px;  
+  top:-7px;
+  z-index: 999; 
 }
 .mini-badget{
   height: 45px;
@@ -394,6 +395,7 @@ body{
   position: absolute;
   right: -3px;
   top: -3px;
+  z-index: 999;
 }
 .special-badget{
   background: image-url('special_badget.png') no-repeat center center;
@@ -403,6 +405,12 @@ body{
 }
 .mini-badget.free-badget{
  background: image-url('free-badget-mini.png') no-repeat center center; 
+}
+.donation-badget{
+  background: image-url('donation-badget-big.png') no-repeat center center;
+}
+.mini-badget.donation-badget{
+ background: image-url('donation-badget-mini.png') no-repeat center center; 
 }
 .accepted-badget{
   background: image-url('accepted.png') no-repeat center center;
@@ -633,6 +641,7 @@ body{
     padding:10px;
     margin-top: 15px;
     margin-bottom: 10px;
+    position: relative;
   }
   .deal-full-detail-page-container{
     width: calc(100% - 315px);
