--- a/app/views/errors/422.html.erb
+++ b/app/views/errors/422.html.erb
@@ -1,26 +1,43 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>The change you wanted was rejected (422)</title>
-  <style type="text/css">
-    body { background-color: #fff; color: #666; text-align: center; font-family: arial, sans-serif; }
-    div.dialog {
-      width: 25em;
-      padding: 0 4em;
-      margin: 4em auto 0 auto;
-      border: 1px solid #ccc;
-      border-right-color: #999;
-      border-bottom-color: #999;
-    }
-    h1 { font-size: 100%; color: #f00; line-height: 1.5em; }
+  <title>Алдаа гарлаа</title>
+   <%= stylesheet_link_tag    "application", :media => "all" %>
+
+  <link href='https://fonts.googleapis.com/css?family=Roboto+Condensed:700&subset=cyrillic' rel='stylesheet' type='text/css'>
+  <style>
+      body{
+        height: 100%;
+      }
+    .page-not-found, .page-not-found-title, .page-not-found-message, .page-not-found-countdown, .page-not-found-countdown span{ 
+           font-family: 'Roboto Condensed', sans-serif;
+         }
   </style>
+  <script type="text/javascript">
+    (function () {
+        var timeLeft = 5,
+            cinterval;
+
+        var timeDec = function (){
+            timeLeft--;
+            document.getElementById('countdown').innerHTML = timeLeft;
+            if(timeLeft === 0){
+              clearInterval(cinterval);
+              window.location = "/";
+            }
+        };
+
+        cinterval = setInterval(timeDec, 1000);
+    })();
+  </script>
 </head>
 
 <body>
   <!-- This file lives in public/422.html -->
-  <div class="dialog">
-    <h1>The change you wanted was rejected.</h1>
-    <p>Maybe you tried to change something you didn't have access to.</p>
+  <div class="page-not-found">
+    <div class="page-not-found-title">#422</div>
+    <div class="page-not-found-message">Таны хүсэлтийг биелүүлэх явцад алдаа гарлаа.</div>
+    <div class="page-not-found-countdown"><span id="countdown">5</span> секундын дараа нүүр хуудас руу шилжих болно.</div>
   </div>
 </body>
 </html>
