--- a/app/views/errors/500.html.erb
+++ b/app/views/errors/500.html.erb
@@ -1,18 +1,17 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>We're sorry, but something went wrong (500)</title>
-  <style type="text/css">
-    body { background-color: #fff; color: #666; text-align: center; font-family: arial, sans-serif; }
-    div.dialog {
-      width: 25em;
-      padding: 0 4em;
-      margin: 4em auto 0 auto;
-      border: 1px solid #ccc;
-      border-right-color: #999;
-      border-bottom-color: #999;
-    }
-    h1 { font-size: 100%; color: #f00; line-height: 1.5em; }
+  <title>Алдаа гарлаа</title>
+   <%= stylesheet_link_tag    "application", :media => "all" %>
+
+  <link href='https://fonts.googleapis.com/css?family=Roboto+Condensed:700&subset=cyrillic' rel='stylesheet' type='text/css'>
+  <style>
+      body{
+        height: 100%;
+      }
+    .page-not-found, .page-not-found-title, .page-not-found-message, .page-not-found-countdown, .page-not-found-countdown span{ 
+           font-family: 'Roboto Condensed', sans-serif;
+         }
   </style>
   <script type="text/javascript">
     (function () {
@@ -35,9 +34,10 @@
 
 <body>
   <!-- This file lives in public/500.html -->
-  <div class="dialog">
-    <h1>We're sorry, but something went wrong.</h1>
-    <p>Redirecting in <span id="countdown">5</span></p>
+  <div class="page-not-found">
+    <div class="page-not-found-title">#500</div>
+    <div class="page-not-found-message">Таны хүсэлтийг биелүүлэх явцад алдаа гарлаа.</div>
+    <div class="page-not-found-countdown"><span id="countdown">5</span> секундын дараа нүүр хуудас руу шилжих болно.</div>
   </div>
 </body>
 </html>
