--- a/app/views/home/page2.html.erb
+++ b/app/views/home/page2.html.erb
@@ -16,8 +16,8 @@
 
                 <div class="col-md-12"><div class="home-module-title sub-title">Ерөнхий мэдээлэл</div></div>
 
-                <div class="form-group col-md-12">
-                    <label>Гарчиг <a href="#">[?]</a></label>
+                <div class="form-group col-md-12  has-error">
+                    <label >Гарчиг <a href="#">[?]</a> <span class="has-error-span"> *гарчиг бичихэд алдаа гарсаа гөхшөө</span></label>
                     <input type="text" class="form-control" placeholder="Гарчиг">
                 </div>
 
@@ -32,7 +32,7 @@
                 </div>
                 <div class="form-group col-md-12">
                     <div class="col-md-4 padding_left_delete">
-                        <label>Ангилал</label>
+                        <label>Ангилал <span class="has-error-span"> *ангилал сонгоно уу</span></label>
                         <select class="form-control" disabled>
                           <option>Бараа</option>
                           <option>Үл хөдлөх хөрөнгө</option>
@@ -49,7 +49,7 @@
                           <option>Үйлчилгээ</option>
                         </select>
                     </div>
-                    <div class="col-md-4 padding_right_delete">
+                    <div class="col-md-4 padding_right_delete has-error">
                         <label>&nbsp&nbsp</label>
                         <select class="form-control" disabled>
                           <option>Бараа</option>    
@@ -242,9 +242,14 @@
                 <div class="col-md-12">
 
                     <div class="price-free">
-                            <label>
-                              <input type="checkbox"> Үнэгүй бараа
-                            </label>
+                        <div class="col-md-6">
+                            <input id="toggle1" type="checkbox">
+                            <label for="toggle1">Хэрэглэгчидэд үнэгүй</label>
+                        </div>
+                        <div class="col-md-6">
+                            <input id="toggle2" type="checkbox">
+                            <label for="toggle2">Deal.mn сайн үйлсийн аянд хандивлах</label>
+                        </div>
                     </div>
 
 
