--- a/app/assets/stylesheets/main.css.scss
+++ b/app/assets/stylesheets/main.css.scss
@@ -2,10 +2,6 @@
 /* CSS Document */
 @import url(https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300&subset=latin,cyrillic);
 
-*{
-  word-break: break-all;
-}
-
 html{
   height: 100%;
 }
@@ -21,7 +17,7 @@ body{
 }
 *{
   font-family: 'Open Sans', sans-serif;
-  word-break: break-all;
+  word-wrap: break-word;
 }
 
 
@@ -38,6 +34,17 @@ body{
   padding:8px 0 5px 0;
   height: 30px;
   overflow-y: hidden;
+}
+.header_info_bar_text{
+  word-wrap: normal;
+  word-break: break-all;
+  width: 680px;
+  display: -webkit-box;
+  margin: 0 auto;
+  -webkit-line-clamp: 1;
+  -webkit-box-orient: vertical;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
 .header_info_bar a{
   color: black;
@@ -607,13 +614,21 @@ body{
     font-size: 12px;
     font-weight: bold;
     padding-top: 5px;
+    float:left;
+    width:205px;
     margin-bottom: 5px;
+    display: -webkit-box;
+    -webkit-line-clamp: 1;
+    -webkit-box-orient: vertical;
+    overflow: hidden;
+    text-overflow: ellipsis;
   }
   .info-1{
     color:#7e7d7d;
     font-size: 11px;
     line-height: 18px;
-    height: 35px;
+    width: 205px;
+    max-height: 35px;
     overflow: hidden;
   }
   .main-menu-header{
@@ -1519,11 +1534,17 @@ background: image-url('arrow_right.png') no-repeat 0 0;
   margin-bottom: 10px;
 }
 .right-deal-item{
-   width: 100%;
+  width: 100%;
   border: 1px solid #dbdbdb;
   padding: 10px;
   cursor: pointer;
   margin-bottom: 10px;
+}
+.right-deal-item .title-1{
+  width: 185px;
+}
+.right-deal-item .info-1{
+  width: 185px;
 }
 .right-deal-item:hover{
   border: 1px solid #337ab7;
@@ -1778,6 +1799,7 @@ background: image-url('arrow_right.png') no-repeat 0 0;
   text-align: left;
   float: left;
   padding-top: 5px;
+  max-width: 100%;
 }
 .message-to-date{
   font-size: 11px;
@@ -2246,6 +2268,10 @@ address strong{
   color:#999;
   font-size: 13px;
 }
+.profile-user-messages .title-1{
+  width: 400px;
+  font-weight: normal;
+}
 .profile-all-notification{
   width: 100%;
   position: relative;
@@ -2458,19 +2484,27 @@ address strong{
   color:#666;
   font-size: 12px;
 }
-.notification-content-text div:nth-child(3), .notification-content-text div:nth-child(1){
-    display: -webkit-box;
-    -webkit-line-clamp: 2;
-    -webkit-box-orient: vertical;
-    overflow: hidden;
-    text-overflow: ellipsis;
-    line-height:14px;
-    font-size: 11px;
-    color:#333;
-    margin-bottom: 3px;
+.notification-content-text .info-1{
+  display: -webkit-box;
+  -webkit-line-clamp: 3;
+  -webkit-box-orient: vertical;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  line-height:14px;
+  font-size: 11px;
+  color:#333;
+  margin-bottom: 3px;
+  max-height: 42px;
+  width: 265px;
 }
-.notification-content-text div:nth-child(1){
-  -webkit-line-clamp: 3 !important;
+.message-panel .notification-content-text .info-1{
+  -webkit-line-clamp: 2 !important;
+  max-height: 28px;
+}
+.notification-content-text .title-1{
+  width: 265px;
+  padding: 0px;
+  margin: 0px;
 }
 .profile-all-notification-item .notification-content-text{
 
@@ -2606,9 +2640,6 @@ address strong{
 .add-deal-price-range input{
   float: left;
   width: 120px;
-}
-.free-item-checkbox span{
-  font-weight: normal
 }
 .page-not-found{
       height: 100%;
