--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,7 +18,7 @@
               <%= link_to t('view.header.about_us'), '#' %>
             </li>
             <li>
-              <%= link_to t('view.header.terms_of_use'), '#' %>
+              <%= link_to t('view.header.terms_of_use'), '/terms' %>
             </li>
           <% unless user_signed_in? %>
             <li>
@@ -67,7 +67,7 @@
             <div class="links">
                 <a href="#">Нүүр</a>
                 <a href="#">Бидний тухай</a>
-                <a href="#">Үйлчилгээний нөхцөл</a>
+                <a href="/terms">Үйлчилгээний нөхцөл</a>
                 <a href="#">Түгээмэл асуулт хариулт</a>
                 <a href="#">Сурталчилгаа байршуулах</a>
                 <a href="#">Сайтын бүтэц</a>
