--- a/app/views/home/terms.html.erb
+++ b/app/views/home/terms.html.erb
@@ -1,12 +1,8 @@
 <div class="main">
   <div class="container">
-    <div class="main-left">
-      <%= react_component("CategoryMenu", url: "/rest/categories.json", include_header: true) %>
-      <div class="left-banner">
-        <%= image_tag('banner1.png')%>
-      </div>
+    <div class="full-left">
+      <%= react_component("TosAgreement", current_user_id: current_user.try(:id), standalone_page: true) %>
     </div>
-    <%= react_component("Timeline", current_user_id: current_user.try(:id)) %>
     <div class="main-right">
       <div class="right-banner">
         <a href="#"><%= image_tag('bobby_banner.jpg')%></a>
