--- a/app/views/listings/new.html.erb
+++ b/app/views/listings/new.html.erb
@@ -1,1 +1,1 @@
-<%= react_component("ListingEditorPage", listing_id: @listing.id, p_conditions: @product_conditions, service_cat: Service::SERVICE_CATEGORY_ID, edit_mode: false) %>
+<%= react_component("ListingEditorPage", listing_id: @listing.id, p_conditions: @product_conditions, service_cat: Service::SERVICE_CATEGORY_ID, edit_mode: false, current_user_id: current_user.try(:id)) %>
