--- a/app/views/devise/mailer/reset_password_instructions.html.erb
+++ b/app/views/devise/mailer/reset_password_instructions.html.erb
@@ -1,8 +1,8 @@
-<p>Hello <%= @resource.email %>!</p>
+<p>Сайн байна уу <%= @resource.email %>!</p>
 
-<p>Someone has requested a link to change your password. You can do this through the link below.</p>
+<p>Та deal.mn сайтад нэвтрэх нууц үгээ солих хүсэлт илгээсэн байна. Доорх линк дээр дарж нууц үгээ солино уу</p>
 
-<p><%= link_to 'Change my password', edit_password_url(@resource, :reset_password_token => @resource.reset_password_token) %></p>
+<p><%= link_to 'Нууц үг солих', edit_password_url(@resource, :reset_password_token => @resource.reset_password_token) %></p>
 
-<p>If you didn't request this, please ignore this email.</p>
-<p>Your password won't change until you access the link above and create a new one.</p>
+<p>Хэрвээ та энэхүү хүсэлтийг илгээгээгүй бол ямар нэг үйлдэл хийх шаардлагагүй.</p>
+<p>Дээрх линкээр орж нууц үгээ солих хүртэл таны нууц үг өөрчлөгдөхгүй болно.</p>
