--- a/app/views/home/page16.html.erb
+++ b/app/views/home/page16.html.erb
@@ -4,7 +4,17 @@
       <div class="full-width">
 
 
-          <%= image_tag('avatar.jpg')%>
+          <div class="col-md-6 about-left-image"><%= image_tag('deal-about-image.jpg')%></div>
+          <div class="col-md-6 about-right-text">
+
+            <div class="about-right-logo"><%= image_tag('deal-logo-big.png')%></div>
+            <div class="about-right-text">
+
+              Deal.mn сайт нь олон нийтэд зориулсан МӨНГӨН ОРОЛЦООГҮЙгээр хэрэглэгч хооронд бараа үйлчилгээг солилцох боломжыг олгож буй чөлөөт, нээлттэй үнэ төлбөргүй сайт юм. Та deal.mn сайтаар дамжуулан өөрт хэрэгцээгүй боловч бусдад хэрэгцээтэй байгаа бараа үйлчилгээг өөрт хэрэгцээтэй бараа үйлчилгээгээр солих буюу БАРТЕРдах боломжтой.
+
+            </div>
+
+          </div>
                                      
      
 
@@ -15,6 +25,20 @@
 
 
       </div>
+    </div>
+    <div class="about-us-partners-logo">
+
+      <div class="container">
+
+        <div class="about-us-partners-title">Хамтран ажиллагч байгууллагууд</div>
+
+        <div class="col-md-3"><a href="https://www.facebook.com/361Mongolia/"><%= image_tag('361degree.png')%></a></div>
+        <div class="col-md-3"><a href="https://www.facebook.com/361Mongolia/"><%= image_tag('361degree.png')%></a></div>
+        <div class="col-md-3"><a href="https://www.facebook.com/361Mongolia/"><%= image_tag('361degree.png')%></a></div>
+        <div class="col-md-3"><a href="https://www.facebook.com/361Mongolia/"><%= image_tag('361degree.png')%></a></div>
+
+      </div>
+
     </div>
   </div>
 </div>
